# godot-rapier-2d-simple

./: .gitignore  README.md  justfile  project.godot
addons/rapier-2d-simple/: plugin.cfg  plugin.gd  rapier-2d-simple.gdnlib
addons/rapier-2d-simple/classes/: rapier_2d_ball_collider.gdns  rapier_2d_cuboid_collider.gdns  rapier_2d_dynamic_body.gdns  rapier_2d_fixed_body.gdns  rapier_2d_kinematic_position_based_body.gdns  rapier_2d_kinematic_velocity_based_body.gdns  rapier_2d_world.gdns
addons/rapier-2d-simple/example/: Ball.tscn  CircleBody.png.import  Example.tscn
native/: Cargo.toml
native/src/: classes.rs  lib.rs
native/src/classes/: common.rs  godot_rapier_2d_body.rs  godot_rapier_2d_collider.rs  godot_rapier_2d_world.rs  godot_rapier_body.rs  godot_rapier_world.rs
