[package]
name = "godot-rapier2d-simple"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
gdnative = "0.11.0"
rapier2d = "0.16.0"

[profile.dev.package.rapier2d]
opt-level = 3
